--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
-<html>
+<html ng-app>
 <head>
-  <meta charset="UTF-8"> 
+  <meta charset="utf-8"> 
   <title>Hello World</title>
+  <link rel="stylesheet" href="static/style.css">
+  <script src="static/pixur.js"></script>
 </head>
 <body>
-  hi
+  <ul>
+    {{ range .Pics }}
+      <li>{{.Id}}</li>
+    {{end}}
+  </ul>
+  <form action="api/upload" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" /><br />
+    <input type="submit" value="submit" />
+  </form>
 </body>
 </html>
