--- a/tpl/index.html
+++ b/tpl/index.html
@@ -12,7 +12,7 @@
       <li>{{.Id}}</li>
     {{end}}
   </ul>
-  <form action="api/upload" method="post" enctype="multipart/form-data">
+  <form action="api/createPic" method="post" enctype="multipart/form-data">
     <input type="file" name="file" /><br />
     <input type="submit" value="submit" />
   </form>
