Added thumbnail creation support, changed display style slightly, fixed a erroneous log message

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -9,7 +9,7 @@
 <body>
   <ul>
     {{ range .Pics }}
-      <li><img src="{{.RelativeURL }}" /> </li>
+      <li><a href="{{.RelativeURL }}"><img src="{{.ThumbnailRelativeURL }}" /></a></li>
     {{end}}
   </ul>
   <form action="api/createPic" method="post" enctype="multipart/form-data">
