--- a/tpl/index.html
+++ b/tpl/index.html
@@ -14,6 +14,7 @@
   </ul>
   <form action="api/createPic" method="post" enctype="multipart/form-data">
     <input type="file" name="file" /><br />
+    <input placeholder="File URL" name="url" /><br />
     <input type="submit" value="submit" />
   </form>
 </body>
