--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,21 +1,12 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="pixur">
 <head>
   <meta charset="utf-8"> 
   <title>Hello World</title>
   <link rel="stylesheet" href="static/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.5/angular.min.js"></script>
   <script src="static/pixur.js"></script>
 </head>
-<body>
-  <ul>
-    {{ range .Pics }}
-      <li><a href="{{.RelativeURL }}"><img src="{{.ThumbnailRelativeURL }}" /></a></li>
-    {{end}}
-  </ul>
-  <form action="api/createPic" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" /><br />
-    <input placeholder="File URL" name="url" /><br />
-    <input type="submit" value="submit" />
-  </form>
+<body ng-include="'/static/index.html'">
 </body>
 </html>
