--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,10 @@
 <div ng-controller="IndexCtrl as ctrl">
   <ul>
     <li ng-repeat="pic in ctrl.pics">
-      <a ng-href="{{pic.relative_url }}"><img ng-src="{{pic.thumbnail_relative_url}}" /></a>
+      <a ng-href="{{pic.relative_url }}"><img class="thumbnail" ng-src="{{pic.thumbnail_relative_url}}" /></a>
     </li>
   </ul>
-  <form action="api/createPic" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" onchange="angular.element(this).controller().fileChange(this)" /><br />
-    <input placeholder="File URL" name="url" ng-model="ctrl.upload.url"  /><br />
-    <input type="button" value="submit" ng-click="ctrl.createPic()" />
-  </form>
+  <input type="file" name="file" onchange="angular.element(this).controller().fileChange(this)" /><br />
+  <input placeholder="File URL" name="url" ng-model="ctrl.upload.url"  /><br />
+  <input type="button" value="submit" ng-click="ctrl.createPic()" />
 </div>
