--- a/tpl/index.html
+++ b/tpl/index.html
@@ -2,7 +2,7 @@
 <html ng-app="pixur">
 <head>
   <meta charset="utf-8"> 
-  <title>Hello World</title>
+  <title>Pixur</title>
   <link rel="stylesheet" href="static/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.5/angular.min.js"></script>
   <script src="static/pixur.js"></script>
