--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,14 @@
-<div ng-controller="IndexCtrl as ctrl">
+<div ng-controller="IndexCtrl as ctrl" scroll>
+	<div ng-if="ctrl.pics.length > 0">
+		<!-- TODO: implement previous
+		<span style="float:left"><a ng-click="ctrl.loadPrevious()" ng-href="{{'i/' +ctrl.prevPageID}}">Previous</a></span>
+		-->
+		<span style="float:right"><a ng-click="ctrl.loadNext()" ng-href="{{'i/' + ctrl.nextPageID}}">Next</a></span>
+		<span style="clear:both">&nbsp;</span>
+	</div>
   <ul>
     <li ng-repeat="pic in ctrl.pics">
-      <a ng-href="{{pic.relative_url }}"><img class="thumbnail" ng-src="{{pic.thumbnail_relative_url}}" /></a>
+      <a ng-href="{{pic.relative_url}}" target="_self"><img class="thumbnail" ng-src="{{pic.thumbnail_relative_url}}" /></a>
     </li>
   </ul>
   <input type="file" name="file" onchange="angular.element(this).controller().fileChange(this)" /><br />
