--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html ng-app="pixur">
 <head>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
+	<base href="/">
   <title>Pixur</title>
   <link rel="stylesheet" href="static/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.5/angular.min.js"></script>
