--- a/tpl/index.html
+++ b/tpl/index.html
@@ -5,9 +5,10 @@
 	<base href="/">
   <title>Pixur</title>
   <link rel="stylesheet" href="static/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.5/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.min.js"></script>
   <script src="static/pixur.js"></script>
 </head>
-<body ng-include="'/static/index.html'">
+<body ng-view>
 </body>
 </html>
