--- a/static/viewer.html
+++ b/static/viewer.html
@@ -1,11 +1,20 @@
 <div class="viewer">
   <div ng-if="ctrl.isImage">
-    <a ng-href="{{ctrl.pic.relative_url}}" target="_self"><img ng-src="{{ctrl.pic.relative_url}}" /></a>
+    <a ng-href="{{ctrl.pic.relative_url}}" target="_self"><img 
+      ng-src="{{ctrl.pic.relative_url}}" 
+      style="max-width: 950px; width: {{ctrl.pic.width}}px;"
+      /></a>
   </div>
   <!-- TODO make this work on mobile -->
   <div ng-if="ctrl.isVideo">
-    <video width="{{ctrl.pic.width}}" height="{{ctrl.pic.height}}" ng-src="{{ctrl.pic.relative_url}}" loop muted autoplay controls>
-    Your browser does not support the video tag.
+    <video 
+        style="max-width: 950px; width: {{ctrl.pic.width}}px;" 
+        ng-src="{{ctrl.pic.relative_url}}" 
+        loop
+        muted
+        autoplay
+        controls>
+      Your browser does not support the video tag.
     </video> 
   </div>
 </div>
