--- a/static/viewer.html
+++ b/static/viewer.html
@@ -2,9 +2,10 @@
   <div ng-if="ctrl.isImage">
     <a ng-href="{{ctrl.pic.relative_url}}" target="_self"><img 
       ng-src="{{ctrl.pic.relative_url}}" 
-      style="max-width: 950px; width: {{ctrl.pic.width}}px;"
+      
       /></a>
   </div>
+  <!-- style="max-width: 950px; width: {{ctrl.pic.width}}px;" -->
   <!-- TODO make this work on mobile -->
   <div ng-if="ctrl.isVideo">
     <video 
@@ -17,4 +18,5 @@
       Your browser does not support the video tag.
     </video> 
   </div>
+  <a href="#" onclick="window.history.back()">Back</a>
 </div>
