--- a/tpl/index.html
+++ b/tpl/index.html
@@ -2,11 +2,15 @@
 <html ng-app="pixur">
 <head>
   <meta charset="utf-8">
+  <meta name=viewport content="width=device-width, initial-scale=1">
 	<base href="/">
   <title>Pixur</title>
   <link rel="stylesheet" href="static/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.min.js"></script>
+  <script src="static/controllers/index.js"></script>
+  <script src="static/controllers/viewer.js"></script>
+  <script src="static/services/pics.js"></script>
   <script src="static/pixur.js"></script>
 </head>
 <body ng-view>
