--- a/static/viewer.html
+++ b/static/viewer.html
@@ -2,14 +2,14 @@
   <div ng-if="ctrl.isImage">
     <a ng-href="{{ctrl.pic.relative_url}}" target="_self"><img 
       ng-src="{{ctrl.pic.relative_url}}" 
+      style="width: auto; height: auto; max-width: 100%"
       
       /></a>
   </div>
-  <!-- style="max-width: 950px; width: {{ctrl.pic.width}}px;" -->
   <!-- TODO make this work on mobile -->
   <div ng-if="ctrl.isVideo">
     <video 
-        style="max-width: 950px; width: {{ctrl.pic.width}}px;" 
+        style="width: auto; height: auto; max-width: 100%" 
         ng-src="{{ctrl.pic.relative_url}}" 
         loop
         muted
