Expose tags on viewer page

--- a/static/viewer.html
+++ b/static/viewer.html
@@ -18,5 +18,8 @@
       Your browser does not support the video tag.
     </video> 
   </div>
+  <ul>
+    <li ng-repeat="picTag in ctrl.picTags">{{picTag.name}}<br></li>
+  </ul>
   <a href="#" onclick="window.history.back()">Back</a>
 </div>
