--- a/tpl/index.html
+++ b/tpl/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="static/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.min.js"></script>
+  
   <script src="static/controllers/index.js"></script>
   <script src="static/controllers/viewer.js"></script>
   <script src="static/controllers/quickviewer.js"></script>
   <script src="static/services/pics.js"></script>
-  <script src="static/pixur.js"></script>
+  <script src="static/client.js"></script>
+  <!--<script src="static/pixur.js"></script>-->
 </head>
 <body ng-view>
 </body>
