Add Previous links, disable prefetching, and remove gopherjs experiment

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -13,8 +13,7 @@
   <script src="static/controllers/viewer.js"></script>
   <script src="static/controllers/quickviewer.js"></script>
   <script src="static/services/pics.js"></script>
-  <script src="static/client.js"></script>
-  <!--<script src="static/pixur.js"></script>-->
+  <script src="static/pixur.js"></script>
 </head>
 <body ng-view>
 </body>
