--- a/static/index_body.html
+++ b/static/index_body.html
@@ -1,6 +1,7 @@
 <div class="index">
   <div ng-if="ctrl.pics.length > 0">
-    <span style="float:left"><a ng-href="/">Home</a></span>
+    <span style="text-align: center"><a ng-href="/">Home</a></span>
+    <span style="float:left"><a ng-show="ctrl.prevPageID" ng-href="{{'i/' + ctrl.prevPageID}}">Previous</a></span>
     <span style="float:right"><a ng-show="ctrl.nextPageID" ng-href="{{'i/' + ctrl.nextPageID}}">Next</a></span>
     <span style="clear:both">&nbsp;</span>
   </div>
@@ -14,6 +15,7 @@
       </div>
     </li>
   </ul>
+  <span style="float:left"><a ng-show="ctrl.prevPageID" ng-href="{{'i/' + ctrl.prevPageID}}">Previous</a></span>
   <span style="float:right"><a ng-show="ctrl.nextPageID" ng-href="{{'i/' + ctrl.nextPageID}}">Next</a></span>
   <span style="clear:both"></span>
   <input type="file" name="file" onchange="angular.element(this).controller().fileChange(this)" /><br />
