--- a/static/index_body.html
+++ b/static/index_body.html
@@ -10,8 +10,8 @@
       <div class="thumbnail-cntr">
         <a ng-href="p/{{pic.id}}"><img 
           class="thumbnail"
-          ng-class="{deleted: pic.pending_deletion}" 
-          ng-src="{{pic.thumbnail_relative_url}}" /></a>
+          ng-class="{deleted: pic.pendingDeletion}" 
+          ng-src="{{pic.thumbnailRelativeUrl}}" /></a>
       </div>
     </li>
   </ul>
