--- a/tpl/index.html
+++ b/tpl/index.html
@@ -6,12 +6,14 @@
 	<base href="/">
   <title>Pixur</title>
   <link rel="stylesheet" href="static/style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-route.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-cookies.js"></script>
   
   <script src="static/controllers/index.js"></script>
   <script src="static/controllers/viewer.js"></script>
   <script src="static/controllers/quickviewer.js"></script>
+  <script src="static/services/auth.js"></script>
   <script src="static/services/pics.js"></script>
   <script src="static/pixur.js"></script>
 </head>
