static: add a simple login page

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -13,6 +13,7 @@
   <script src="static/controllers/index.js"></script>
   <script src="static/controllers/viewer.js"></script>
   <script src="static/controllers/quickviewer.js"></script>
+  <script src="static/controllers/login.js"></script>
   <script src="static/services/auth.js"></script>
   <script src="static/services/pics.js"></script>
   <script src="static/pixur.js"></script>
