tpl: add a dummy favicon

--- a/tpl/index.html
+++ b/tpl/index.html
@@ -5,6 +5,7 @@
   <meta name=viewport content="width=device-width, initial-scale=1">
 	<base href="/">
   <title>Pixur</title>
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <link rel="stylesheet" href="static/style.css">
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
