all: add basic logout support

--- a/static/index_body.html
+++ b/static/index_body.html
@@ -24,6 +24,6 @@
   <input placeholder="File URL" name="url" ng-model="ctrl.upload.url"  /><br />
   <input type="button" value="submit" ng-click="ctrl.createPic()" />
   <br />
-  <span ng-show="ctrl.auth">Logged in as {{ctrl.auth.ident}}</span>
+  <span ng-show="ctrl.auth">Logged in as {{ctrl.auth.ident}} <a ng-click="ctrl.logOut()" ng-href="/">Log out</a></span>
   <span ng-hide="ctrl.auth"><a ng-href="u/login">Login / Join</a></span>
 </div>
