--- a/fe/tpl/base.html
+++ b/fe/tpl/base.html
@@ -4,6 +4,58 @@
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>{{.Title}}</title>
+    <style>
+    body {
+  background-color: #FFFFEE;
+  margin: 0
+}
+
+ul.thumbnail-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
+
+.index {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  /*fit inside a 1024 monitor.*/
+  max-width: 950px
+}
+
+.thumbnail-cntr {
+  background-color: #FFFFEE;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #2c1fc0;
+  border-radius: 10px;
+  display: inline-block;
+  height: 160px;
+  margin: 3px;
+  padding: 0;
+  text-align: center;
+  width: 160px;
+}
+
+.thumbnail-cntr:hover {
+  border-color: #9c99bf;
+}
+
+img.thumbnail {
+  width: 160px;
+  height: 160px;
+  border-radius: 8px;
+}
+
+img.deleted {
+  filter: blur(5px) grayscale(5%);
+  -webkit-filter: blur(5px) grayscale(5%);
+}
+    </style>
   </head>
   <body>
     {{ template "body" .}}
