--- a/fe/tpl/index.html
+++ b/fe/tpl/index.html
@@ -1,13 +1,38 @@
 {{define "body"}}
 <div class="index">
-  {{if .Pics}}
+  {{ $ps := .Paths}} 
   <div>
-    <span style="text-align: center"><a href="{{ .RootPath}}">Home</a></span>
-    {{if .PrevID}}<span style="float:left"><a href="{{ .PrevID}}">Previous</a></span>{{end}}
-    {{if .NextID}}<span style="float:right"><a href="{{ .NextID}}">Next</a></span>{{end}}
+    <span style="text-align: center"><a href="{{$ps.Root}}">Home</a></span>
+    {{if .PrevID}}<span style="float:left"><a href="{{$ps.Index .PrevID}}?prev">Previous</a></span>{{end}}
+    {{if .NextID}}<span style="float:right"><a href="{{$ps.Index .NextID}}">Next</a></span>{{end}}
     <span style="clear:both">&nbsp;</span>
   </div>
+  {{if .Pic}}
+  <ul class="thumbnail-list">
+    {{- range .Pic -}}
+    <li>{{- /**/ -}}
+      <div class="thumbnail-cntr">{{- /**/ -}}
+        <a href="{{$ps.Viewer .Id}}">{{- /**/ -}}
+          <img {{/**/ -}}
+	          class="thumbnail{{if .PendingDeletion}} deleted{{end}}" {{/**/ -}}
+	          src="{{$ps.Root}}{{.ThumbnailRelativeUrl}}" />{{- /**/ -}}
+	      </a>{{- /**/ -}}
+      </div>{{- /**/ -}}
+    </li>{{- /**/ -}}
+    {{- end -}}
+  </ul>
   {{end}}
+  <div>
+    <span style="text-align: center"><a href="{{$ps.Root}}">Home</a></span>
+    {{if .PrevID}}<span style="float:left"><a href="{{$ps.Index .PrevID}}?prev">Previous</a></span>{{end}}
+    {{if .NextID}}<span style="float:right"><a href="{{$ps.Index .NextID}}">Next</a></span>{{end}}
+    <span style="clear:both">&nbsp;</span>
+  </div>
 </div>
-<a href="{{.LoginPath}}">Login / Join</a>
+<form action="" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" /><br />
+    <input placeholder="File URL" name="url" /><br />
+    <input type="submit" value="Submit" />
+</form>
+  <a href="{{$ps.Login}}">Login / Join</a>
 {{end}}
