--- a/fe/tpl/login.html
+++ b/fe/tpl/login.html
@@ -1,10 +1,11 @@
 {{define "style"}}{{end}}
 {{define "body"}}
-{{ $p := .Paths}}
-<form action="{{$p.LoginAction}}" method="post">
+{{ $pt := .Paths}}
+{{ $pr := .Params}}
+<form action="{{$pt.LoginAction}}" method="post">
   <input type="text" name="ident" placeholder="Ident" /><br />
   <input type="password" name="secret" /><br />
-  <input type="hidden" name="{{.XsrfName}}" value="{{.XsrfToken}}" />
+  <input type="hidden" name="{{$pr.Xsrf}}" value="{{.XsrfToken}}" />
   <input type="submit" value="Login" />
   {{- if .Next}}<input type="hidden" value="{{.Next}}" />{{end -}}
 </form>
