fe/handler: add comment support

--- a/fe/tpl/base.html
+++ b/fe/tpl/base.html
@@ -10,7 +10,7 @@
         margin: 0;
       }
     </style>
-    {{ template "style" .}}
+    {{ block "style" .}}{{end}}
   </head>
   <body>
     {{ template "body" .}}
