--- a/fe/tpl/login.html
+++ b/fe/tpl/login.html
@@ -1,4 +1,3 @@
-{{define "style"}}{{end}}
 {{define "body"}}
 {{ $pt := .Paths}}
 {{ $pr := .Params}}
@@ -6,7 +5,7 @@
   <input type="text" name="ident" placeholder="Ident" /><br />
   <input type="password" name="secret" /><br />
   <input type="hidden" name="{{$pr.Xsrf}}" value="{{.XsrfToken}}" />
+  <input type="hidden" name="{{$pr.Next}}" value="{{.Next}}" />
   <input type="submit" value="Login" />
-  {{- if .Next}}<input type="hidden" value="{{.Next}}" />{{end -}}
 </form>
 {{end}}
