fe/handlers: support soft deletion

--- a/fe/tpl/comment_reply.html
+++ b/fe/tpl/comment_reply.html
@@ -12,5 +12,5 @@
   <input type="hidden" name="{{$pr.PicId}}" value="{{.PicComment.PicId}}" />
   <input type="hidden" name="{{$pr.CommentParentId}}" value="{{.PicComment.CommentId}}" />
   <input type="submit" value="Reply" />
-<form>
+</form>
 {{end}}
