fe: unify html and lookup user when possible

--- a/fe/tpl/base.html
+++ b/fe/tpl/base.html
@@ -10,9 +10,9 @@
         margin: 0;
       }
     </style>
-    {{ block "style" .}}{{end}}
+    {{block "basestyle" .}}{{end}}
   </head>
   <body>
-    {{ template "body" .}}
+    {{template "body" .}}
   </body>
 </html>
