--- a/fe/tpl/user_edit.html
+++ b/fe/tpl/user_edit.html
@@ -1,9 +1,9 @@
-{{- define "style" -}}
+{{- define "panestyle" -}}
 <style>
 
 </style>
 {{- end -}}
-{{define "body"}}
+{{define "pane"}}
 {{- $pt := .Paths -}}
 {{- $pr := .Params -}}
 <div>
