--- a/fe/tpl/viewer.html
+++ b/fe/tpl/viewer.html
@@ -1,4 +1,4 @@
-{{- define "style" -}}
+{{- define "panestyle" -}}
 <style>
   .viewer .thepic, .viewer .thevideo {
     height: auto;
@@ -13,7 +13,7 @@
   }
 </style>
 {{- end -}}
-{{define "body"}}
+{{define "pane"}}
 {{- $pt := .Paths -}}
 {{- $pr := .Params -}}
 <div class="viewer">
