--- a/fe/tpl/index.html
+++ b/fe/tpl/index.html
@@ -1,11 +1,7 @@
-{{define "style"}}
+{{define "panestyle"}}
 <style>
   .index {
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
-    /*fit inside a 1024 monitor.*/
-    max-width: 950px
   }
 
   .index ul.thumbnail-list {
@@ -70,7 +66,7 @@
     <span class="nav-clear"></span>
   </div>
 {{end}}
-{{define "body"}}
+{{define "pane"}}
 <div class="index">
   {{ $pt := .Paths}}
   {{- $pr := .Params -}}
